// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typedly.Guard exclude Exclude<string, ""> 1`] = `
[
  "a",
]
`;

exports[`typedly.Guard intersection boolean & true 1`] = `
[
  true,
]
`;

exports[`typedly.Guard intersection falsy & number 1`] = `
[
  0,
]
`;

exports[`typedly.Guard intersection string & "" 1`] = `
[
  "",
]
`;

exports[`typedly.Guard not array 1`] = `
[
  true,
  false,
  "a",
  "",
  42,
  13.37,
  0,
  undefined,
  null,
]
`;

exports[`typedly.Guard not boolean 1`] = `
[
  "a",
  "",
  42,
  13.37,
  [
    1,
    3,
    3,
    7,
  ],
  [],
  0,
  undefined,
  null,
]
`;

exports[`typedly.Guard not falsy 1`] = `
[
  true,
  "a",
  42,
  13.37,
  [
    1,
    3,
    3,
    7,
  ],
  [],
]
`;

exports[`typedly.Guard not null 1`] = `
[
  true,
  false,
  "a",
  "",
  42,
  13.37,
  [
    1,
    3,
    3,
    7,
  ],
  [],
  0,
  undefined,
]
`;

exports[`typedly.Guard not number 1`] = `
[
  true,
  false,
  "a",
  "",
  [
    1,
    3,
    3,
    7,
  ],
  [],
  undefined,
  null,
]
`;

exports[`typedly.Guard not string 1`] = `
[
  true,
  false,
  42,
  13.37,
  [
    1,
    3,
    3,
    7,
  ],
  [],
  0,
  undefined,
  null,
]
`;

exports[`typedly.Guard not undefined 1`] = `
[
  true,
  false,
  "a",
  "",
  42,
  13.37,
  [
    1,
    3,
    3,
    7,
  ],
  [],
  0,
  null,
]
`;

exports[`typedly.Guard union boolean | string 1`] = `
[
  true,
  false,
  "a",
  "",
]
`;

exports[`typedly.Guard union number | array 1`] = `
[
  42,
  13.37,
  [
    1,
    3,
    3,
    7,
  ],
  [],
  0,
]
`;

exports[`typedly.Guard union undefined | null 1`] = `
[
  undefined,
  null,
]
`;
